limit characters of name and moreinfo

--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -710,7 +710,7 @@
           <input type="hidden" id="image-base64-add-lsc" name="image" />
 
           <label for="name">Name:</label>
-          <input type="text" id="name-add-lsc" name="name" required /><br /><br />
+          <input type="text" id="name-add-lsc" name="name" maxlength="35" required /><br /><br />
 
           <label for="party">Party:</label>
           <select id="party-add-lsc" name="party">
@@ -719,7 +719,7 @@
           ><br /><br />
 
           <label for="more-info">Info:</label><br />
-          <textarea id="more-info-add-lsc" name="moreInfo"></textarea>
+          <textarea id="more-info-add-lsc" name="moreInfo" maxlength="150"></textarea>
           <br />
           <input type="submit" class="button button-add" value="Add" />
         </form>
@@ -750,14 +750,14 @@
           <input type="hidden" id="original-image-edit-lsc" name="originalImage" />
 
           <label for="name">Name:</label>
-          <input type="text" id="name-edit-lsc" name="name" /><br /><br />
+          <input type="text" id="name-edit-lsc" name="name" maxlength="35" /><br /><br />
           <label for="party">Party:</label>
           <select id="party-edit-lsc" name="party">
             <option value="KASAMA - BulSU">KASAMA</option>
             <option value="BulSUONE">BulSU ONE</option></select
           ><br /><br />
           <label for="more-info">Info:</label><br />
-          <textarea id="more-info-edit-lsc" name="moreInfo"></textarea>
+          <textarea id="more-info-edit-lsc" name="moreInfo" maxlength="150"></textarea>
           <br />
           <input type="submit" class="button button-save" value="Save" />
         </form>
@@ -783,14 +783,14 @@
           <input type="hidden" id="image-base64-add" name="image" />
 
           <label for="name">Name:</label>
-          <input type="text" id="name-add" name="name" required /><br /><br />
+          <input type="text" id="name-add" name="name" maxlength="35" required /><br /><br />
           <label for="party">Party:</label>
           <select id="party-add" name="party">
             <option value="KASAMA - BulSU">KASAMA - BulSU</option>
             <option value="BulSUONE">BulSUONE</option></select
           ><br /><br />
           <label for="more-info">Info:</label><br />
-          <textarea id="more-info-add" name="moreInfo"></textarea>
+          <textarea id="more-info-add" name="moreInfo" maxlength="150"></textarea>
           <br />
           <input type="submit" class="button button-add" value="Add" />
         </form>
@@ -816,14 +816,14 @@
           <input type="hidden" id="original-image-edit" name="originalImage" />
 
           <label for="name">Name:</label>
-          <input type="text" id="name-edit" name="name" /><br /><br />
+          <input type="text" id="name-edit" name="name" maxlength="35" /><br /><br />
           <label for="party">Party:</label>
           <select id="party-edit" name="party">
             <option value="KASAMA - BulSU">KASAMA</option>
             <option value="BulSUONE">BulSU ONE</option></select
           ><br /><br />
           <label for="more-info">Info:</label><br />
-          <textarea id="more-info-edit" name="moreInfo"></textarea>
+          <textarea id="more-info-edit" name="moreInfo" maxlength="150"></textarea>
           <br />
           <input type="submit" class="button button-save" value="Save" />
         </form>
