--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -261,4 +261,9 @@ input[type="button"]:active {
   .form-button {
     flex-direction: row;
   }
+
+  .content-main-left,
+  .content-main-right {
+    display: none;
+  }
 }
