--- a/views/about.ejs
+++ b/views/about.ejs
@@ -94,10 +94,9 @@
             </p>
             <br />
             <br />
-            <div class="title-row">
-              <h2 class="montserrat" id="tanikala">Tanikala&nbsp;</h2>
-              <h2 class="montserrat" id="voting">Voting System</h2>
-            </div>
+
+            <h2 class="montserrat" id="tanikala">Tanikala Voting System</h2>
+
             <br />
             <div>
               <h3 class="light-yellow">What is the TANIKALA Voting System?</h3>
