--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -36,7 +36,7 @@
           <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
             <h2 class="montserrat h1-big about">Contact Us</h2>
-            <p class="montserrat light">If you have any questions or feedback, <br />feel free to reach us!</p>
+            <p class="montserrat light">If you have any questions or feedback, feel free to reach us!</p>
           </div>
           <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
         </div>
