--- a/views/homepages/index-registration-period.ejs
+++ b/views/homepages/index-registration-period.ejs
@@ -71,7 +71,7 @@
 
           <!-- Label for the countdown -->
           <h2 id="time-left" class="h1"></h2>
-          <h2 id="get-ready-container" class="h1 waiting-text">| &nbsp;<span id="get-ready-to-register"></span></h2>
+          <h2 id="get-ready-container" class="h1 waiting-text"><span id="get-ready-to-register"></span></h2>
 
           <!-- The register button uses an id for stable reference -->
           <button id="register-button" class="button-rounded-yellow" onclick="window.location.href='/data-privacy';">REGISTER NOW</button>
