--- a/views/homepages/index-vote-checking-period.ejs
+++ b/views/homepages/index-vote-checking-period.ejs
@@ -36,7 +36,7 @@
           <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
             <h2 class="montserrat period">
-              <span><%= electionConfig.electionName %></span><br />
+              The <span><%= electionConfig.electionName %></span>
               Vote Checking Period Is Ongoing
             </h2>
           </div>
