--- a/views/homepages/index-voting-period.ejs
+++ b/views/homepages/index-voting-period.ejs
@@ -67,7 +67,7 @@
           <!-- Label for the countdown -->
           <h2 id="time-left" class="h1"></h2>
           <!-- <h2 id="prepare-to-cast-your-votes" class="h1 waiting-text"></h2> -->
-          <h2 id="prepare-to-container" class="h1 waiting-text">| &nbsp;<span id="prepare-to-cast-your-votes"></span></h2>
+          <h2 id="prepare-to-container" class="h1 waiting-text"><span id="prepare-to-cast-your-votes"></span></h2>
 
           <!-- The voting button uses an id for stable reference -->
           <button id="voting-button" class="button-rounded-yellow" onclick="window.location.href='/vote';">VOTE NOW</button>
