--- a/views/homepages/index-results-are-out-period.ejs
+++ b/views/homepages/index-results-are-out-period.ejs
@@ -36,13 +36,14 @@
         <div class="main-first">
           <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
-            <h2 class="montserrat period">The Results for the <br /><span><%= electionConfig.electionName %></span><br />Are Out!</h2>
+            <h2 class="montserrat period">The Results for the <%= electionConfig.electionName %> Are Out!</h2>
           </div>
           <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
         </div>
         <div class="main-container">
           <p class="bigger-text">
-            Thank you for your participation! The election period for the <span class="election-name">BulSU Student Government Elections S.Y. 2025-2026</span> has concluded. To view the official results, please refer to the University Commission on Student Elections (BulSU UCSE) official page: <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a> <br />
+            Thank you for your participation! The election period for the <span class="election-name">BulSU Student Government Elections S.Y. 2025-2026</span> has concluded. To view the official results, please refer to the University Commission on Student Elections (BulSU UCSE) official page:
+            <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a> <br />
             <br />
             Alternatively, you can view and verify the results directly by clicking <a href="/rvs-about">here.</a>
           </p>
