--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -22,10 +22,11 @@
       </div>
       <nav class="header-nav">
         <ul class="header-nav-content">
-          <li id="active-link">Vote</li>
-          <li>Review</li>
-          <li>Verify</li>
-
+          <div id="links">
+            <li id="active-link">Vote</li>
+            <li>Review</li>
+            <li>Verify</li>
+          </div>
           <div class="settings">
             <i class="fa-solid fa-user"></i>
 
@@ -50,7 +51,6 @@
         <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
         <div class="first-text">
           <h2 class="title"><%= electionConfig.electionName %></h2>
-          <br />
         </div>
         <!-- <div class="content-mobile logos">
           <div class="content-main-left">
