--- a/public/voter/css/verify.css
+++ b/public/voter/css/verify.css
@@ -249,3 +249,114 @@ table {
   display: flex;
   flex-direction: column;
 }
+
+.content-mobile {
+  display: flex;
+}
+
+@media (max-width: 1000px) {
+  .title {
+    font-size: 1.75rem;
+  }
+  .no-mobile {
+    display: none;
+  }
+  .row,
+  .receipt-container,
+  .verify {
+    flex-direction: column; /* Stack elements on top of each other */
+    align-items: center; /* Center items */
+  }
+
+  .column {
+    width: 90%; /* Make columns take full width */
+    margin-bottom: 1rem; /* Add spacing between stacked columns */
+  }
+
+  #receiptContainer,
+  .receipt-footer,
+  div.column.box-shadow {
+    max-width: 90vw;
+  }
+
+  table {
+    width: 100%;
+  }
+
+  .receipt {
+    height: auto; /* Allow receipt height to adjust dynamically */
+  }
+
+  .receipt-header {
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  .receipt-footer {
+    height: auto;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+  }
+
+  .receipt-footer p {
+    font-size: 0.6rem;
+  }
+
+  .content {
+    padding: 0.5rem;
+    height: auto;
+  }
+
+  .receipt-header img {
+    width: 10rem;
+  }
+
+  .circle-logo {
+    width: 50px;
+  }
+
+  .bar-code {
+    width: 150px;
+  }
+
+  .invoice-header {
+    flex-direction: column;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .invoice-header h1 {
+    font-size: 20px;
+  }
+
+  .invoice-body {
+    padding: 10px;
+    margin: 0 10px;
+  }
+
+  .invoice-footer {
+    padding: 5px;
+    font-size: 12px;
+  }
+
+  .voting-receipt {
+    font-size: 1rem;
+    text-align: center;
+    padding: 0.5rem;
+  }
+
+  table {
+    font-size: 0.6rem; /* Reduce font size for tables */
+  }
+
+  .column p {
+    font-size: 0.7rem; /* Reduce paragraph font size */
+  }
+
+  .long {
+    word-wrap: break-word; /* Ensures words break if they exceed the width */
+    overflow-wrap: break-word; /* Alternative for better browser support */
+    white-space: normal; /* Allows text to wrap naturally */
+    max-width: 100%; /* Ensures it doesn't exceed the container */
+  }
+}
