--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -24,18 +24,19 @@
       </div>
       <nav class="header-nav">
         <ul class="header-nav-content">
-          <li>Vote</li>
-          <p>|</p>
-          <li>Review</li>
-          <p>|</p>
-          <li id="active-link">Verify</li>
+          <div id="links">
+            <li>Vote</li>
+            <li>Review</li>
+            <li id="active-link">Verify</li>
+          </div>
           <div class="settings">
             <i class="fa-solid fa-user"></i>
+
             <div class="dropdown" onclick="toggleDropdownVoter()"></div>
             <div class="dropdown-menu">
               <p>
                 Logged in as <br />
-                <strong><%= email %> </strong>
+                <strong><%= email %></strong>
               </p>
               <hr class="dropdown-line" />
               <a href="/voter/logout">Log Out</a>
@@ -49,11 +50,20 @@
     <!-- Content Section -->
     <div class="content">
       <div class="main-first">
-        <img src="/img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+        <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
         <div class="first-text">
           <h2 class="title"><%= electionConfig.electionName %></h2>
         </div>
-        <img src="/img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
+        <!-- <div class="content-mobile logos">
+          <div class="content-main-left">
+            <img src="img/logo_bulsu.png" alt="BulSU Logo" class="logo-opacity" />
+          </div>
+
+          <div class="content-main-right">
+            <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" />
+          </div>
+        </div> -->
+        <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
       </div>
 
       <!-- <div class="receipt">
@@ -72,15 +82,14 @@
             <div class="column box-shadow">
               <div class="receipt-header">
                 <img src="/img/logo_tanikala.png" />
-                <div class="voting-receipt">VOTING RECEIPT</div>
               </div>
-              <div class="receipt-subheader"></div>
+              <div class="receipt-subheader"><div class="voting-receipt">VOTING RECEIPT</div></div>
 
               <br />
               <hr />
 
               <div class="left">
-                <p><strong>Voter ID:</strong> <%= voterHash %></p>
+                <p class="long"><strong>Voter ID:</strong> <%= voterHash %></p>
                 <p><strong>College:</strong> <%= voterCollege %></p>
                 <p><strong>Program:</strong> <%= voterProgram %></p>
               </div>
@@ -138,7 +147,7 @@
               <hr />
               <div class="left">
                 <p><strong>Voting Date and Time:</strong> <%= new Date().toLocaleString() %></p>
-                <p><strong>Transaction Hash:</strong> <%= txHash %></p>
+                <p class="long"><strong>Transaction Hash:</strong> <%= txHash %></p>
                 <p><strong>Status:</strong> Vote successfully recorded on blockchain.</p>
               </div>
               <hr />
