--- a/public/css/about.css
+++ b/public/css/about.css
@@ -313,7 +313,7 @@ h5 {
   .about-text > #bulsu,
   #tanikala,
   #developer {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     text-align: center;
   }
 
@@ -339,9 +339,9 @@ h5 {
     margin: 0;
   }
 
-  .picture-holder * {
-    padding: 0;
-    margin: 0;
+  .picture-holder {
+    padding: 1rem;
+    /* margin: 0; */
   }
 
   .picture-holder img {
@@ -355,7 +355,7 @@ h5 {
   }
 
   .picture-holder hr {
-    width: 60%;
+    width: 100%;
   }
 
   /* haba name ni cheska, pagpantay ng hr */
@@ -409,10 +409,6 @@ h5 {
     align-self: center;
     justify-self: center;
     text-align: center;
-  }
-
-  #developer {
-    font-size: 1.6rem;
   }
 
   .content-main-left,
